@@ -1,45 +1,35 @@
 package io.allitov.rbac.model.role;
 
+import io.allitov.rbac.model.validator.Validator;
+import io.allitov.rbac.model.validator.impl.PermissionValidator;
+import lombok.AccessLevel;
+import lombok.Data;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Strings;
 
-public record Permission(String name, String resource, String description) {
+@Data
+@RequiredArgsConstructor(access = AccessLevel.PRIVATE)
+public class Permission {
 
-    public Permission {
-        name = normalizeName(name);
-        resource = normalizeResource(resource);
-        validate(name, resource, description);
-    }
+    @Getter(AccessLevel.NONE)
+    private static final Validator<Permission> VALIDATOR = new PermissionValidator();
 
-    private String normalizeName(String name) {
-        return name != null ? name.trim().toUpperCase() : null;
-    }
+    private final String name;
+    private final String resource;
+    private final String description;
 
-    private String normalizeResource(String resource) {
-        return resource != null ? resource.trim().toLowerCase() : null;
-    }
-
-    private void validate(String name, String resource, String description) {
-        if (name == null || name.isBlank()) {
-            throw new IllegalArgumentException(String.format("Name must not be null or blank. Given: '%s'", name));
-        }
-
-        if (name.contains(" ")) {
-            throw new IllegalArgumentException(String.format("Name must not contain spaces. Given: '%s'", name));
-        }
-
-        if (resource == null || resource.isBlank()) {
-            throw new IllegalArgumentException(
-                    String.format("Resource must not be null or blank. Given: '%s'", resource));
-        }
-
-        if (description == null || description.isBlank()) {
-            throw new IllegalArgumentException(
-                    String.format("Description must not be null or blank. Given: '%s'", description));
-        }
+    public static Permission of(String name, String resource, String description) {
+        name = StringUtils.toRootUpperCase(name);
+        resource = StringUtils.toRootLowerCase(resource);
+        Permission newPermission = new Permission(name, resource, description);
+        VALIDATOR.validate(newPermission);
+        return newPermission;
     }
 
     public String format() {
-        return String.format("%s on %s: %s", name, resource, description);
+        return "%s on %s: %s".formatted(name, resource, description);
     }
 
     public boolean matches(String namePattern, String resourcePattern) {
